# ag

./: Cargo.toml  README.md  ag.dia
examples/: gpcos.json  gpcos.rs  griewank.json  griewank.rs  params.json  ugolki.json  ugolki.rs
src/: lib.rs
