[package]
name = "ag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kodama = "0.2.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
rayon = "1.5.1"
serde_json = "1.0"
serde = {version="1.0.136",features = ["derive"]}
json_comments = "0.2.1"
num_cpus = "1.13.1"
cpu-time = "1.0.0"
ctrlc = "3.2.1"
