[package]
name = "ag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kodama = "*"
rand = "*"
rand_chacha = "*"
rayon = "*"
serde_json = "*"
serde = {version="*",features = ["derive"]}
json_comments = "*"
num_cpus = "*"
cpu-time = "*"
ctrlc = "*"
